limit fact limit 200 word, adding heading h1 and giving it some css

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>facts about cat</h1>
         <div class="flex">
 
             <button id="next">Next</button>
